responsive navbar added

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.nav-link {
+  @apply p-4 hover:bg-red-400 transition duration-300 ease-in;
+}
+.desktop-link {
+  @apply px-4 py-2 uppercase text-sm hover:bg-red-200 transition duration-300 ease-in-out rounded font-semibold;
+}
