login register page design complete

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,15 @@
 .desktop-link {
   @apply px-4 py-2 uppercase text-sm hover:bg-red-200 transition duration-300 ease-in-out rounded font-semibold;
 }
+
+/* inpute field */
+.input-field {
+  @apply mt-1 p-2 border block w-full shadow sm:text-sm border-gray-200 outline-none focus:border-green-500  ring-gray-400 rounded-md
+}
+.btn-login {
+  @apply bg-green-800 hover:bg-green-900 font-display font-semibold transition delay-75 text-gray-100 py-2 px-2.5 w-full my-1.5 rounded-md shadow-md
+}
+
+.icon-form {
+  @apply cursor-pointer rounded-full shadow-xl bg-gray-200 p-1 mx-1
+}
