--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 .nav-link {
-  @apply p-4 hover:bg-red-400 transition duration-300 ease-in;
+  @apply block py-2 px-4 bg-green-100 transition duration-300 hover:bg-green-200 mx-2 rounded shadow hover:shadow-md;
 }
 .desktop-link {
   @apply px-4 py-2 uppercase text-sm hover:bg-red-200 transition duration-300 ease-in-out rounded font-semibold;
@@ -20,4 +20,8 @@
 
 .icon-form {
   @apply cursor-pointer rounded-full shadow-xl bg-gray-200 p-1 mx-1
+}
+
+.dash-icon {
+  @apply block py-2 px-4 bg-red-100 transition duration-300 hover:bg-red-200 m-2 rounded shadow hover:shadow-md
 }
